# uts-compute

./: .gitignore  .mcp.json  .mcpbignore  AGENTS.md  CLAUDE.md  README.md  manifest.json  package-lock.json  package.json  server.json
.claude-plugin/: marketplace.json  plugin.json
docs/: README.md  accounts-and-safety.md  architecture-deep-dive.md  architecture-overview.md  architecture.md  client-installed-smoke-evidence.md  dashboard-design.md  distribution.md  fact-registry.md  failure-playbooks.md  implementation-plan.md  mcp-skills-composition-review.md  plugin-setup.md  research-basis.md  schema-migration-plan.md  validation-checklist.md  webui-visual-redesign-spec.md
ihpc-scheduler/: PROVENANCE.json  README.md  UPSTREAM  pyproject.toml
ihpc-scheduler/configs/: config.example.yaml  queue.example.yaml
ihpc-scheduler/src/scanner/: __init__.py  config.py  scanner.py
ihpc-scheduler/src/scanner/core/: __init__.py  models.py  scorer.py
ihpc-scheduler/src/scanner/infra/: __init__.py  cache.py  collector.py  ssh.py
ihpc-scheduler/src/scanner/presentation/: __init__.py  cli.py  formatter.py
ihpc-scheduler/src/scheduler/: __init__.py  _contract.py  cli.py  config.py  lock.py  monitor.py  placement.py  remote_command.py  scheduler.py  state.py  submitter.py  summarizer.py
ihpc-scheduler/tests/: test_scheduler_cli.py  test_scheduler_config.py  test_scheduler_contract.py  test_scheduler_lock.py  test_scheduler_monitor.py  test_scheduler_placement.py  test_scheduler_scheduler.py  test_scheduler_state.py  test_scheduler_submitter.py
mcp-server/: README.md
(+322 files in other folders)
