[project]
name = "uts-ihpc"
version = "0.1.0"
description = "UTS iHPC node scanner and experiment scheduler"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
ihpc-scan  = "src.scanner.presentation.cli:main"
ihpc-sched = "src.scheduler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
summarizer = ["litellm>=1.82.1"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
